[project]
name = "langgraph-secure-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.7",
    "langgraph-sdk>=0.4.2",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "isort>=8.0.1",
]
